<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".InsertFragment"
             android:orientation="vertical">

    <Spinner android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/user_type">

    </Spinner>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:hint="@string/field_name"
            android:inputType="text"

    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/street"
                android:hint="@string/street_name"
                android:inputType="text"
                android:paddingRight="@android:dimen/thumbnail_width"
        />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/number"
                android:hint="@string/numero"
                android:inputType="number"/>

    </LinearLayout>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/neiboorhood"
            android:hint="@string/neiboorhood"
            android:inputType="number"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cep"
            android:hint="@string/cep"
            android:inputType="number"/>

</LinearLayout>